platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_47.platter
piece of x = 3;
serve x;